fix mobile overflow-x issue

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -6,8 +6,4 @@
   align-items: center;
   max-width: 1200px;
   margin: auto;
-
-  @media (max-width: 1250px) {
-    padding: 0 20px;
-  }
 }
