--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -1,4 +1,9 @@
 .container {
   width: 100%;
   overflow-x: hidden;
+  position: relative;
+
+  @media (max-width: 1250px) {
+    padding: 0 20px;
+  }
 }
